# AyanBot

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  compile_commands.json  makefile  xmake.lua
Ayan/: Ayan.cpp  CMakeLists.txt
Ayan/core/: apicall.cpp  apiimpl.cpp  bot.h  event.cpp  redirect.h  service.cpp  service.h  utility.cpp  utility.h
dep/: xmake.lua
dep/hv/: CMakeLists.txt  GitHub - 快捷方式.lnk
doc/: 1-Hello.md  2-Echo.md  3-Request.md  4-Notice.md  5-Meta.md  6-Mixin.md  Features.md  README.md  UserManual.md
doc/dev/: README.md  async_impl.md  communication.md  concept.md  service_system.md
example/: AlarmClock.h  Echo.hpp  EchoService.hpp  Hello.hpp  Hello.lua  HelloService.hpp  MixinService.hpp  MixinServiceExample.hpp  OcrImage.hpp  PermitReq.hpp  README.md
include/ayan/: ayan.h  config.h  fwd.h
include/ayan/concepts/: iterable.h  sumtype.h
include/ayan/core/: bot.h  callapi.h  envir.h  event.h  fwd.h  logger.h  message.h  qmsg.h  service.h
include/ayan/import/: eventloop.h  fmt.h  json.h  optional.h  result.h  srcloc.h  timefmt.h  utf8.h  websocket.h
include/ayan/onebot/: api.h  event.h  (+2 more)
src/: Ayan.cpp  Ayan.h  main.cpp
src/core/: CMakeLists.txt  adaptor.h  apicall.h  apiimpl.cpp  apiimpl.h  bot.cpp  bot.h  env.cpp  env.h  event.cpp  event.h  fwd.h  logger.cpp  message.cpp  message.h  qmsg.cpp  redirect.h  service.cpp  service.h  utility.cpp  utility.h
src/onebot/: api.cpp  message.cpp  serde.cpp
src/service/: include.h
src/utils/: log.cpp
test/: test.hpp
(+7 files in other folders)
